syntax = "proto3";

package ipam.service.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";

// IpGroupMemberType defines the type of member in an IP group
enum IpGroupMemberType {
  IP_GROUP_MEMBER_TYPE_UNSPECIFIED = 0;
  IP_GROUP_MEMBER_TYPE_ADDRESS = 1;  // Single IP address (e.g., "192.168.0.1")
  IP_GROUP_MEMBER_TYPE_RANGE = 2;    // IP range (e.g., "192.168.1.10-192.168.1.20")
  IP_GROUP_MEMBER_TYPE_SUBNET = 3;   // CIDR subnet (e.g., "10.0.0.0/24")
}

// IpGroupStatus defines the status of an IP group
enum IpGroupStatus {
  IP_GROUP_STATUS_UNSPECIFIED = 0;
  IP_GROUP_STATUS_ACTIVE = 1;
  IP_GROUP_STATUS_INACTIVE = 2;
}

// IpGroup represents a logical grouping of IP addresses, ranges, or subnets
message IpGroup {
  // Unique identifier
  optional string id = 1 [json_name = "id"];

  // Tenant ID for multi-tenancy
  optional uint32 tenant_id = 2 [json_name = "tenantId"];

  // Human-readable name
  optional string name = 3 [json_name = "name"];

  // Optional description
  optional string description = 4 [json_name = "description"];

  // Group status
  optional IpGroupStatus status = 5 [json_name = "status"];

  // Number of members in this group (computed)
  optional int32 member_count = 6 [json_name = "memberCount"];

  // Custom tags (JSON)
  optional string tags = 20 [json_name = "tags"];

  // Custom metadata (JSON)
  optional string metadata = 21 [json_name = "metadata"];

  // Creation timestamp
  optional google.protobuf.Timestamp created_at = 30 [json_name = "createdAt"];

  // Last update timestamp
  optional google.protobuf.Timestamp updated_at = 31 [json_name = "updatedAt"];

  // Creator user ID
  optional uint32 created_by = 32 [json_name = "createdBy"];

  // Last updater user ID
  optional uint32 updated_by = 33 [json_name = "updatedBy"];
}

// IpGroupMember represents a member of an IP group
message IpGroupMember {
  // Unique identifier
  optional string id = 1 [json_name = "id"];

  // IP Group ID
  optional string ip_group_id = 2 [json_name = "ipGroupId"];

  // Member type (address, range, or subnet)
  optional IpGroupMemberType member_type = 3 [json_name = "memberType"];

  // Value based on member_type:
  // - ADDRESS: "192.168.0.1"
  // - RANGE: "192.168.1.10-192.168.1.20"
  // - SUBNET: "10.0.0.0/24"
  optional string value = 4 [json_name = "value"];

  // Optional description/label for this member
  optional string description = 5 [json_name = "description"];

  // Order/sequence in the group
  optional int32 sequence = 6 [json_name = "sequence"];

  // Creation timestamp
  optional google.protobuf.Timestamp created_at = 30 [json_name = "createdAt"];

  // Last update timestamp
  optional google.protobuf.Timestamp updated_at = 31 [json_name = "updatedAt"];
}

// CreateIpGroupRequest creates a new IP group
message CreateIpGroupRequest {
  optional uint32 tenant_id = 1 [
    json_name = "tenantId",
    (google.api.field_behavior) = REQUIRED
  ];

  optional string name = 2 [
    json_name = "name",
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 255,
    (google.api.field_behavior) = REQUIRED
  ];

  optional string description = 3 [json_name = "description"];
  optional IpGroupStatus status = 4 [json_name = "status"];
  optional string tags = 5 [json_name = "tags"];
  optional string metadata = 6 [json_name = "metadata"];

  // Initial members to add to the group
  repeated IpGroupMemberInput members = 10 [json_name = "members"];
}

// IpGroupMemberInput is used for adding members to a group
message IpGroupMemberInput {
  optional IpGroupMemberType member_type = 1 [
    json_name = "memberType",
    (google.api.field_behavior) = REQUIRED
  ];

  optional string value = 2 [
    json_name = "value",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  optional string description = 3 [json_name = "description"];
  optional int32 sequence = 4 [json_name = "sequence"];
}

message CreateIpGroupResponse {
  IpGroup ip_group = 1 [json_name = "ipGroup"];
}

// GetIpGroupRequest retrieves an IP group by ID
message GetIpGroupRequest {
  string id = 1 [
    json_name = "id",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  // Include members in response
  optional bool include_members = 2 [json_name = "includeMembers"];
}

message GetIpGroupResponse {
  IpGroup ip_group = 1 [json_name = "ipGroup"];
  repeated IpGroupMember members = 2 [json_name = "members"];
}

// ListIpGroupsRequest lists IP groups with filtering
message ListIpGroupsRequest {
  optional uint32 tenant_id = 1 [json_name = "tenantId"];
  optional int32 page = 2 [json_name = "page"];
  optional int32 page_size = 3 [json_name = "pageSize"];
  optional bool no_paging = 4 [json_name = "noPaging"];
  optional string query = 5 [json_name = "query"];
  repeated string order_by = 6 [json_name = "orderBy"];
  optional string field_mask = 7 [json_name = "fieldMask"];

  // Filter by status
  optional IpGroupStatus status = 10 [json_name = "status"];
}

message ListIpGroupsResponse {
  repeated IpGroup items = 1 [json_name = "items"];
  optional int32 total = 2 [json_name = "total"];
}

// UpdateIpGroupRequest updates an IP group
message UpdateIpGroupRequest {
  string id = 1 [
    json_name = "id",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  optional IpGroup data = 2 [json_name = "data"];

  google.protobuf.FieldMask update_mask = 3 [json_name = "updateMask"];
}

message UpdateIpGroupResponse {
  IpGroup ip_group = 1 [json_name = "ipGroup"];
}

// DeleteIpGroupRequest deletes an IP group
message DeleteIpGroupRequest {
  string id = 1 [
    json_name = "id",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];
}

// AddIpGroupMemberRequest adds a member to an IP group
message AddIpGroupMemberRequest {
  string ip_group_id = 1 [
    json_name = "ipGroupId",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  optional IpGroupMemberType member_type = 2 [
    json_name = "memberType",
    (google.api.field_behavior) = REQUIRED
  ];

  optional string value = 3 [
    json_name = "value",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  optional string description = 4 [json_name = "description"];
  optional int32 sequence = 5 [json_name = "sequence"];
}

message AddIpGroupMemberResponse {
  IpGroupMember member = 1 [json_name = "member"];
}

// RemoveIpGroupMemberRequest removes a member from an IP group
message RemoveIpGroupMemberRequest {
  string ip_group_id = 1 [
    json_name = "ipGroupId",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  string member_id = 2 [
    json_name = "memberId",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];
}

// ListIpGroupMembersRequest lists members of an IP group
message ListIpGroupMembersRequest {
  string ip_group_id = 1 [
    json_name = "ipGroupId",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  optional int32 page = 2 [json_name = "page"];
  optional int32 page_size = 3 [json_name = "pageSize"];
  optional bool no_paging = 4 [json_name = "noPaging"];
}

message ListIpGroupMembersResponse {
  repeated IpGroupMember items = 1 [json_name = "items"];
  optional int32 total = 2 [json_name = "total"];
}

// UpdateIpGroupMemberRequest updates a member in an IP group
message UpdateIpGroupMemberRequest {
  string ip_group_id = 1 [
    json_name = "ipGroupId",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  string member_id = 2 [
    json_name = "memberId",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  optional string description = 3 [json_name = "description"];
  optional int32 sequence = 4 [json_name = "sequence"];
}

message UpdateIpGroupMemberResponse {
  IpGroupMember member = 1 [json_name = "member"];
}

// CheckIpInGroupRequest checks if an IP address is contained in any group
message CheckIpInGroupRequest {
  optional uint32 tenant_id = 1 [json_name = "tenantId"];

  string ip_address = 2 [
    json_name = "ipAddress",
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  // Optional: check only specific group IDs
  repeated string group_ids = 3 [json_name = "groupIds"];
}

message CheckIpInGroupResponse {
  // Groups that contain the IP address
  repeated IpGroup matching_groups = 1 [json_name = "matchingGroups"];
}

// IpGroupService manages IP groups and their members
service IpGroupService {
  // Create a new IP group
  rpc CreateIpGroup(CreateIpGroupRequest) returns (CreateIpGroupResponse) {
    option (google.api.http) = {
      post: "/v1/ip-groups"
      body: "*"
    };
  }

  // Get an IP group by ID
  rpc GetIpGroup(GetIpGroupRequest) returns (GetIpGroupResponse) {
    option (google.api.http) = {
      get: "/v1/ip-groups/{id}"
    };
  }

  // List IP groups with filtering
  rpc ListIpGroups(ListIpGroupsRequest) returns (ListIpGroupsResponse) {
    option (google.api.http) = {
      get: "/v1/ip-groups"
    };
  }

  // Update an IP group
  rpc UpdateIpGroup(UpdateIpGroupRequest) returns (UpdateIpGroupResponse) {
    option (google.api.http) = {
      put: "/v1/ip-groups/{id}"
      body: "*"
    };
  }

  // Delete an IP group
  rpc DeleteIpGroup(DeleteIpGroupRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/ip-groups/{id}"
    };
  }

  // Add a member to an IP group
  rpc AddIpGroupMember(AddIpGroupMemberRequest) returns (AddIpGroupMemberResponse) {
    option (google.api.http) = {
      post: "/v1/ip-groups/{ip_group_id}/members"
      body: "*"
    };
  }

  // Remove a member from an IP group
  rpc RemoveIpGroupMember(RemoveIpGroupMemberRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/ip-groups/{ip_group_id}/members/{member_id}"
    };
  }

  // List members of an IP group
  rpc ListIpGroupMembers(ListIpGroupMembersRequest) returns (ListIpGroupMembersResponse) {
    option (google.api.http) = {
      get: "/v1/ip-groups/{ip_group_id}/members"
    };
  }

  // Update a member in an IP group
  rpc UpdateIpGroupMember(UpdateIpGroupMemberRequest) returns (UpdateIpGroupMemberResponse) {
    option (google.api.http) = {
      put: "/v1/ip-groups/{ip_group_id}/members/{member_id}"
      body: "*"
    };
  }

  // Check if an IP address is contained in any group
  rpc CheckIpInGroup(CheckIpInGroupRequest) returns (CheckIpInGroupResponse) {
    option (google.api.http) = {
      get: "/v1/ip-groups/check"
    };
  }
}
